--- a/_config.yml
+++ b/_config.yml
@@ -24,14 +24,29 @@ description: >- # this means to ignore newlines until "baseurl:"
   Help guides for Connecticut Office of Early Childhood's ECE Reporter tool.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
 
 # Build settings
 remote_theme: pmarsceill/just-the-docs
 
+# Aux links for the upper right navigation
+aux_links:
+  "Log in to ECE Reporter":
+    - "https://ece-reporter.ctoec.org/"
+  "View OEC's website":
+    - "https://www.ctoec.org/"
+
+# Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: true
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
+
+
 plugins:
   - jekyll-feed
+
 
 
 
